Day 2: add SCSS + styles

--- a/package.json
+++ b/package.json
@@ -4,4 +4,8 @@
   "description": "Portfolio site. Created during the programming webinars by Skillfactory",
   "author": "Julia Tokarevskaya",
   "license": "ISC",
+  "scripts": {
+    "compile-sass": "sass src/scss/style.scss src/css/style.css",
+    "watch-sass": "sass --watch src/scss/style.scss:src/css/style.css"
+  }
 }
