--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
   "license": "ISC",
   "scripts": {
     "compile-sass": "sass src/scss/style.scss src/css/style.css",
-    "watch-sass": "sass --watch src/scss/style.scss:src/css/style.css"
+    "watch-sass": "sass --watch src/scss/style.scss:src/css/style.css",
+    "build": "webpack"
   },
-  "dependencies": {
-    "sass": "^1.28.0"
+  "dependencies": {},
+  "devDependencies": {
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^1.3.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   }
 }
