--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
   "version": "1.0.0",
   "description": "Portfolio site. Created during the programming webinars by Skillfactory",
   "author": "Julia Tokarevskaya",
-  "license": "ISC"
+  "license": "ISC",
+  "scripts": {
+    "compile-sass": "sass src/scss/style.scss src/css/style.css",
+    "watch-sass": "sass --watch src/scss/style.scss:src/css/style.css"
+  },
+  "dependencies": {
+    "sass": "^1.29.0"
+  }
 }
